// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating component rendering it should render according to theme: Rating Custom Theme 1`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root NatDSRating-root-1 NatDSRating-root-3 MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 1`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root NatDSRating-root-1 NatDSRating-root-3 MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 2`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root NatDSRating-root-1 NatDSRating-root-4 MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 3`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root NatDSRating-root-1 NatDSRating-root-5 MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 4`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root NatDSRating-root-1 NatDSRating-root-6 MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </span>
  </span>
</span>
`;
